[package]
name = "native"
version = "0.1.2"
edition = "2021"
resolver = "2"
repository = "https://github.com/ngutech21/moksha"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
moksha-wallet = { version = "0.1.2", path = "../../moksha-wallet" }
moksha-core = { version = "0.1.2", path = "../../moksha-core" }
moksha-fedimint = { version = "0.1.2", path = "../../moksha-fedimint" }

tracing = "0.1.40"
anyhow = { version = "1.0.75", features = ["backtrace"] }
thiserror = "1.0.50"
flutter_rust_bridge = "1.82.3"
lightning-invoice = "0.24.0"
async-trait = "0.1.74"
url = "2.4.1"
secp256k1 = { version = "0.27.0", features = ["rand", "serde"] }
tokio = { version = "1.34.0", features = ["rt", "sync", "io-util", "macros"] }
lazy_static = "1.4.0"
once_cell = "1.18.0"

[target.'cfg(target_family="wasm")'.dependencies]
gloo-net = { version = "0.4.0" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde = "1.0.192"
serde_json = "1.0.108"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.37"

[target.'cfg(not(target_family="wasm"))'.dependencies]
reqwest = { version = "0.11.22", features = ["serde_json", "json", "rustls-tls"], default-features = false }
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempfile = "3.8.1"
